removed border on mobile, removed redundant styles, v-focus on top input, not two place, fix input-suffix styles

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -93,7 +93,7 @@ input.tm-field {
 }
 
 .input-suffix {
-  background: var(--app-fg);
+  background: transparent;
   display: inline-block;
   position: absolute;
   padding: 7px;
